--- a/package.json
+++ b/package.json
@@ -19,16 +19,14 @@
   },
   "homepage": "https://github.com/OpenMobileAlliance/openmobilealliance.github.io#readme",
   "devDependencies": {
-    "concurrently": "^5.2.0",
-    "eslint": "^7.5.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "jshint": "^2.11.1",
-    "lite-server": "^2.5.4",
-    "prettier": "^2.0.5"
-  },
-  "dependencies": {}
+    "concurrently": "^6.2.1",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-html": "^6.1.2",
+    "eslint-plugin-import": "^2.24.2",
+    "jshint": "^2.13.1",
+    "lite-server": "^2.6.1",
+    "prettier": "^2.3.2"
+  }
 }
